3rd Section Completed

--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-django-debug-toolbar = "*"
-mysqlclient = "*"
-djangorestframework = "*"
-django-filter = "*"
+drf-nested-routers = "*"
 
 [dev-packages]
 
